[package]
name = "se-stats-exporter"
version = "0.1.0"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.1", features = ["json"] }
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.123", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
tungstenite = { version = "0.13.0", default-features = false, features = ["rustls-tls"] }
flume = "0.10.2"
serde_json = "1.0.62"
metrics-exporter-prometheus = "0.3.0"
metrics = "0.14.2"
anyhow = "1.0.38"
tracing = "0.1.24"
