[package]
name = "se-stats-exporter"
version = "0.1.0"
authors = ["Chronophylos <nikolai@chronophylos.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.1", features = ["json"] }
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.123", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
metrics-exporter-prometheus = "0.3.0"
metrics = "0.14.2"
tracing = "0.1.24"
tracing-subscriber = "0.2.16"
